project/mp4cloud/chart/mp4cloud/手动部署所需文件/mp-car-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mp-car-ingress
  namespace: dev 
  annotations:
    nginx.ingress.kubernetes.io/rewite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
             proxy_set_header Cookie $http_cookie;
             proxy_set_header  X-Real-IP    $remote_addr;
             proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
spec:
  rules:
  - host: car.dev.frcloud.io
    http:
      paths:
      - path:
        backend:
          serviceName: mport1-dev                                                                                                                                                                   
          servicePort: 8080
